tests/invalid/str_wrong_arg_count/main.py
def run_case() -> None:
    x: str = str(1, 2)

if __name__ == "__main__":
    run_case()
